# coda-mcp-server

./: .bandit  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  PHASE5_TYPE_VALIDATION_PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/scripts/: generate-release-notes.py
.github/workflows/: ci.yml  release.yml  security.yml
src/coda_mcp_server/: client.py  server.py
src/coda_mcp_server/models/: __init__.py  common.py  docs.py  exports.py  formulas.py  pages.py  rows.py  tables.py
src/coda_mcp_server/tools/: docs.py  formulas.py  pages.py  rows.py  tables.py
src/python_mcp_template/: server.py
src/resources/: coda-openapi.yml
tests/: conftest.py  test_async_utils.py  test_client.py  test_client_requests.py  test_models.py  test_sample.py  test_utils.py
tests/tools/: __init__.py
