[build-system]
# Changed from Poetry to setuptools for PEP 621 compatibility
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coda-mcp-server"
version = "0.1.0"
description = "An MCP server which integrates with Coda.io"
authors = [
    { name = "Richie Caputo", email = "rcaputo3@tjclp.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp>=3.12.12",
    "fastmcp>=2.0.0,<3.0.0",
    "requests>=2.32.4"
]

[dependency-groups]
dev = [
    "mypy>=1.14.1,<2.0.0",
    "pre-commit>=4.1.0,<5.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.25.3,<1.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.9.3,<0.10.0",
    "safety>=3.2.14,<4.0.0",
    "notebook>=6.0,<7.0"
]

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["I", "E", "F", "D"]
fix = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "src"
disallow_untyped_defs = true
files = ["src", "tests"]
incremental = true
show_error_codes = true
ignore_missing_imports = true
